vendor backend added

--- a/AuthService/src/main/resources/application.properties
+++ b/AuthService/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.datasource.password=1qazZAQ!
 
 spring.jpa.show-sql=true
 
-#jwt.secret=knowitsecretknowitsecretknowitsecretknowitsecret
-#jwt.jwtExpirationInMs=18000000
+jwt.secret=yourBase64EncodedSecretHere
+jwt.jwtExpirationInMs=3600000
 spring.security.enabled=false
