--- a/Services/FarmerService/src/main/resources/application.properties
+++ b/Services/FarmerService/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=FarmerService
 
 spring.datasource.url=jdbc:mysql://localhost:3306/p09_agroconnectdb
 spring.datasource.username=root
-spring.datasource.password=Suraj@12345
+spring.datasource.password=1qazZAQ!
 spring.jpa.show-sql=true
 
 server.port=8081
